:zap: remove refetch on pokemon by setting staleTime to Infinity + add font

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,7 +10,13 @@
   src: url('Archivo-Variable.woff2') format('woff2');
 }
 
+@font-face {
+  font-family: 'PKMN';
+  src: url('PKMN.ttf') format('truetype');
+}
+
 @theme {
   --font-sans: 'Archivo';
   --font-clash: 'Clash Display';
+  --font-pkmn: 'PKMN';
 }
